# RedesUdec

Archivus2/: Memory.txt  Mundo.txt  Text1.txt
Lab1/: CMakeLists.txt  Readme.txt  client.c  crypto.c  keygen.c  server.c  tcp.c
Lab1/Archivos/: Llave.key
Lab1/includes/: tcp.h
Lab2/: CMakeLists.txt
Lab2/include/: udp.h
Lab2/src/: client.c  rudp.c  server.c  udp.c
libsodium-1.0.18/: Makefile  config.status  libtool
libsodium-1.0.18/builds/: Makefile
libsodium-1.0.18/contrib/: Makefile
libsodium-1.0.18/dist-build/: Makefile
libsodium-1.0.18/msvc-scripts/: Makefile
libsodium-1.0.18/src/: Makefile
libsodium-1.0.18/src/libsodium/: Makefile
libsodium-1.0.18/src/libsodium/.libs/: libsodium.23.dylib
libsodium-1.0.18/src/libsodium/crypto_auth/.deps/: libsodium_la-crypto_auth.Plo
libsodium-1.0.18/src/libsodium/crypto_box/.deps/: libsodium_la-crypto_box.Plo  libsodium_la-crypto_box_easy.Plo  libsodium_la-crypto_box_seal.Plo
libsodium-1.0.18/src/libsodium/crypto_generichash/.deps/: libsodium_la-crypto_generichash.Plo
libsodium-1.0.18/src/libsodium/crypto_hash/.deps/: libsodium_la-crypto_hash.Plo
libsodium-1.0.18/src/libsodium/crypto_kdf/.deps/: libsodium_la-crypto_kdf.Plo
libsodium-1.0.18/src/libsodium/crypto_kx/.deps/: libsodium_la-crypto_kx.Plo
libsodium-1.0.18/src/libsodium/crypto_onetimeauth/.deps/: libsodium_la-crypto_onetimeauth.Plo
libsodium-1.0.18/src/libsodium/include/: Makefile
libsodium-1.0.18/src/libsodium/sodium/.deps/: libsodium_la-codecs.Plo  (+4 more)
libsodium-1.0.18/test/: Makefile
libsodium-1.0.18/test/default/: Makefile
(+88 files in other folders)
